[package]
name = "fiddle_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bootloader = { version="0.9.19", features = ["map_physical_memory"]}
volatile = "0.4.4"
spin = "0.9.2"
pic8259 = "0.10.1"
x86_64 = "0.14.6"
pc-keyboard = "0.5.1"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
# The cargo subcommand that will be used for building the kernel.
#
# For building using the `cargo-xbuild` crate, set this to `xbuild`.
build-command = ["xbuild", "--target=fiddle.json"]
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"